Archive/Old/192.168.224.250/scans/tcp135/tcp_135_rpc_rpcdump.md
Impacket v0.11.0 - Copyright 2023 Fortra

[*] Retrieving endpoint list from 192.168.224.250
Protocol: N/A
Provider: N/A
UUID    : 51A227AE-825B-41F2-B4A9-1AC9557A1018 v1.0 Ngc Pop Key Service
Bindings:
          ncacn_ip_tcp:192.168.224.250[49664]
          ncalrpc:[samss lpc]
          ncalrpc:[SidKey Local End Point]
          ncalrpc:[protected_storage]
          ncalrpc:[lsasspirpc]
          ncalrpc:[lsapolicylookup]
          ncalrpc:[LSA_EAS_ENDPOINT]
          ncalrpc:[LSA_IDPEXT_ENDPOINT]
          ncalrpc:[lsacap]
          ncalrpc:[LSARPC_ENDPOINT]
          ncalrpc:[securityevent]
          ncalrpc:[audit]
          ncacn_np:\\WINPREP[\pipe\lsass]

Protocol: N/A
Provider: N/A
UUID    : 8FB74744-B2FF-4C00-BE0D-9EF9A191FE1B v1.0 Ngc Pop Key Service
Bindings:
          ncacn_ip_tcp:192.168.224.250[49664]
          ncalrpc:[samss lpc]
          ncalrpc:[SidKey Local End Point]
          ncalrpc:[protected_storage]
          ncalrpc:[lsasspirpc]
          ncalrpc:[lsapolicylookup]
          ncalrpc:[LSA_EAS_ENDPOINT]
          ncalrpc:[LSA_IDPEXT_ENDPOINT]
          ncalrpc:[lsacap]
          ncalrpc:[LSARPC_ENDPOINT]
          ncalrpc:[securityevent]
          ncalrpc:[audit]
          ncacn_np:\\WINPREP[\pipe\lsass]

Protocol: N/A
Provider: N/A
UUID    : B25A52BF-E5DD-4F4A-AEA6-8CA7272A0E86 v2.0 KeyIso
Bindings:
          ncacn_ip_tcp:192.168.224.250[49664]
          ncalrpc:[samss lpc]
          ncalrpc:[SidKey Local End Point]
          ncalrpc:[protected_storage]
          ncalrpc:[lsasspirpc]
          ncalrpc:[lsapolicylookup]
          ncalrpc:[LSA_EAS_ENDPOINT]
          ncalrpc:[LSA_IDPEXT_ENDPOINT]
          ncalrpc:[lsacap]
          ncalrpc:[LSARPC_ENDPOINT]
          ncalrpc:[securityevent]
          ncalrpc:[audit]
          ncacn_np:\\WINPREP[\pipe\lsass]

Protocol: [MS-SAMR]: Security Account Manager (SAM) Remote Protocol
Provider: samsrv.dll
UUID    : 12345778-1234-ABCD-EF00-0123456789AC v1.0
Bindings:
          ncacn_ip_tcp:192.168.224.250[49664]
          ncalrpc:[samss lpc]
          ncalrpc:[SidKey Local End Point]
          ncalrpc:[protected_storage]
          ncalrpc:[lsasspirpc]
          ncalrpc:[lsapolicylookup]
          ncalrpc:[LSA_EAS_ENDPOINT]
          ncalrpc:[LSA_IDPEXT_ENDPOINT]
          ncalrpc:[lsacap]
          ncalrpc:[LSARPC_ENDPOINT]
          ncalrpc:[securityevent]
          ncalrpc:[audit]
          ncacn_np:\\WINPREP[\pipe\lsass]

Protocol: [MS-RSP]: Remote Shutdown Protocol
Provider: wininit.exe
UUID    : D95AFE70-A6D5-4259-822E-2C84DA1DDB0D v1.0
Bindings:
          ncacn_ip_tcp:192.168.224.250[49665]
          ncalrpc:[WindowsShutdown]
          ncacn_np:\\WINPREP[\PIPE\InitShutdown]
          ncalrpc:[WMsgKRpc0ACF50]

Protocol: N/A
Provider: winlogon.exe
UUID    : 76F226C3-EC14-4325-8A99-6A46348418AF v1.0
Bindings:
          ncalrpc:[WindowsShutdown]
          ncacn_np:\\WINPREP[\PIPE\InitShutdown]
          ncalrpc:[WMsgKRpc0ACF50]
          ncalrpc:[WMsgKRpc0B1E51]

Protocol: N/A
Provider: N/A
UUID    : D09BDEB5-6171-4A34-BFE2-06FA82652568 v1.0
Bindings:
          ncalrpc:[csebpub]
          ncalrpc:[LRPC-981ac18476349f506a]
          ncalrpc:[LRPC-7c3c7f4e6c207c36fe]
          ncalrpc:[LRPC-6cad713325dc1e50bc]
          ncalrpc:[LRPC-6ac63cac98fd4dd270]
          ncalrpc:[OLE4E6A365B00092939E09A5038A6D2]
          ncalrpc:[LRPC-3015998694f3996edd]
          ncalrpc:[actkernel]
          ncalrpc:[umpo]
          ncalrpc:[LRPC-7c3c7f4e6c207c36fe]
          ncalrpc:[LRPC-6cad713325dc1e50bc]
          ncalrpc:[LRPC-6ac63cac98fd4dd270]
          ncalrpc:[OLE4E6A365B00092939E09A5038A6D2]
          ncalrpc:[LRPC-3015998694f3996edd]
          ncalrpc:[actkernel]
          ncalrpc:[umpo]
          ncalrpc:[LRPC-6cad713325dc1e50bc]
          ncalrpc:[LRPC-6ac63cac98fd4dd270]
          ncalrpc:[OLE4E6A365B00092939E09A5038A6D2]
          ncalrpc:[LRPC-3015998694f3996edd]
          ncalrpc:[actkernel]
          ncalrpc:[umpo]
          ncalrpc:[LRPC-08847f46bd8a281b61]
          ncalrpc:[LRPC-c686fbf9d8784d4fad]

Protocol: N/A
Provider: N/A
UUID    : 697DCDA9-3BA9-4EB2-9247-E11F1901B0D2 v1.0
Bindings:
          ncalrpc:[LRPC-981ac18476349f506a]
          ncalrpc:[LRPC-7c3c7f4e6c207c36fe]
          ncalrpc:[LRPC-6cad713325dc1e50bc]
          ncalrpc:[LRPC-6ac63cac98fd4dd270]
          ncalrpc:[OLE4E6A365B00092939E09A5038A6D2]
          ncalrpc:[LRPC-3015998694f3996edd]
          ncalrpc:[actkernel]
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : 9B008953-F195-4BF9-BDE0-4471971E58ED v1.0
Bindings:
          ncalrpc:[LRPC-7c3c7f4e6c207c36fe]
          ncalrpc:[LRPC-6cad713325dc1e50bc]
          ncalrpc:[LRPC-6ac63cac98fd4dd270]
          ncalrpc:[OLE4E6A365B00092939E09A5038A6D2]
          ncalrpc:[LRPC-3015998694f3996edd]
          ncalrpc:[actkernel]
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : 0D47017B-B33B-46AD-9E18-FE96456C5078 v1.0
Bindings:
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : 95406F0B-B239-4318-91BB-CEA3A46FF0DC v1.0
Bindings:
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : 4ED8ABCC-F1E2-438B-981F-BB0E8ABC010C v1.0
Bindings:
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : 0FF1F646-13BB-400A-AB50-9A78F2B7A85A v1.0
Bindings:
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : 6982A06E-5FE2-46B1-B39C-A2C545BFA069 v1.0
Bindings:
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : 082A3471-31B6-422A-B931-A54401960C62 v1.0
Bindings:
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : FAE436B0-B864-4A87-9EDA-298547CD82F2 v1.0
Bindings:
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : E53D94CA-7464-4839-B044-09A2FB8B3AE5 v1.0
Bindings:
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : 178D84BE-9291-4994-82C6-3F909ACA5A03 v1.0
Bindings:
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : 4DACE966-A243-4450-AE3F-9B7BCB5315B8 v2.0
Bindings:
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : 1832BCF6-CAB8-41D4-85D2-C9410764F75A v1.0
Bindings:
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : C521FACF-09A9-42C5-B155-72388595CBF0 v0.0
Bindings:
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : 2C7FD9CE-E706-4B40-B412-953107EF9BB0 v0.0
Bindings:
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : 88ABCBC3-34EA-76AE-8215-767520655A23 v0.0
Bindings:
          ncalrpc:[LRPC-6ac63cac98fd4dd270]
          ncalrpc:[OLE4E6A365B00092939E09A5038A6D2]
          ncalrpc:[LRPC-3015998694f3996edd]
          ncalrpc:[actkernel]
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : 76C217BC-C8B4-4201-A745-373AD9032B1A v1.0
Bindings:
          ncalrpc:[LRPC-6ac63cac98fd4dd270]
          ncalrpc:[OLE4E6A365B00092939E09A5038A6D2]
          ncalrpc:[LRPC-3015998694f3996edd]
          ncalrpc:[actkernel]
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : 55E6B932-1979-45D6-90C5-7F6270724112 v1.0
Bindings:
          ncalrpc:[LRPC-6ac63cac98fd4dd270]
          ncalrpc:[OLE4E6A365B00092939E09A5038A6D2]
          ncalrpc:[LRPC-3015998694f3996edd]
          ncalrpc:[actkernel]
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : 857FB1BE-084F-4FB5-B59C-4B2C4BE5F0CF v1.0
Bindings:
          ncalrpc:[OLE4E6A365B00092939E09A5038A6D2]
          ncalrpc:[LRPC-3015998694f3996edd]
          ncalrpc:[actkernel]
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : 20C40295-8DBA-48E6-AEBF-3E78EF3BB144 v2.0
Bindings:
          ncalrpc:[OLE4E6A365B00092939E09A5038A6D2]
          ncalrpc:[LRPC-3015998694f3996edd]
          ncalrpc:[actkernel]
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : 2513BCBE-6CD4-4348-855E-7EFB3C336DD3 v2.0
Bindings:
          ncalrpc:[OLE4E6A365B00092939E09A5038A6D2]
          ncalrpc:[LRPC-3015998694f3996edd]
          ncalrpc:[actkernel]
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : 0D3E2735-CEA0-4ECC-A9E2-41A2D81AED4E v1.0
Bindings:
          ncalrpc:[LRPC-3015998694f3996edd]
          ncalrpc:[actkernel]
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : C605F9FB-F0A3-4E2A-A073-73560F8D9E3E v1.0
Bindings:
          ncalrpc:[LRPC-3015998694f3996edd]
          ncalrpc:[actkernel]
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : 1B37CA91-76B1-4F5E-A3C7-2ABFC61F2BB0 v1.0
Bindings:
          ncalrpc:[LRPC-3015998694f3996edd]
          ncalrpc:[actkernel]
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : 8BFC3BE1-6DEF-4E2D-AF74-7C47CD0ADE4A v1.0
Bindings:
          ncalrpc:[LRPC-3015998694f3996edd]
          ncalrpc:[actkernel]
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : 2D98A740-581D-41B9-AA0D-A88B9D5CE938 v1.0
Bindings:
          ncalrpc:[LRPC-3015998694f3996edd]
          ncalrpc:[actkernel]
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : DD59071B-3215-4C59-8481-972EDADC0F6A v1.0
Bindings:
          ncalrpc:[actkernel]
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : 0361AE94-0316-4C6C-8AD8-C594375800E2 v1.0
Bindings:
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : 5824833B-3C1A-4AD2-BDFD-C31D19E23ED2 v1.0
Bindings:
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : BDAA0970-413B-4A3E-9E5D-F6DC9D7E0760 v1.0
Bindings:
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : 3B338D89-6CFA-44B8-847E-531531BC9992 v1.0
Bindings:
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : 8782D3B9-EBBD-4644-A3D8-E8725381919B v1.0
Bindings:
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : 085B0334-E454-4D91-9B8C-4134F9E793F3 v1.0
Bindings:
          ncalrpc:[umpo]

Protocol: N/A
Provider: N/A
UUID    : 4BEC6BB8-B5C2-4B6F-B2C1-5DA5CF92D0D9 v1.0
Bindings:
          ncalrpc:[umpo]

Protocol: N/A
Provider: sysntfy.dll
UUID    : C9AC6DB5-82B7-4E55-AE8A-E464ED7B4277 v1.0 Impl friendly name
Bindings:
          ncalrpc:[LRPC-34fd5a9b723f589422]
          ncalrpc:[LRPC-41ba959e001b669875]
          ncalrpc:[IUserProfile2]
          ncalrpc:[LRPC-66ddf8e4fac6695043]
          ncalrpc:[senssvc]
          ncalrpc:[LRPC-f9e3053fa8b9dd8e60]

Protocol: N/A
Provider: N/A
UUID    : E40F7B57-7A25-4CD3-A135-7F7D3DF9D16B v1.0
Bindings:
          ncalrpc:[LRPC-2f85a9b9484571ea2e]

Protocol: N/A
Provider: N/A
UUID    : 880FD55E-43B9-11E0-B1A8-CF4EDFD72085 v1.0 KAPI Service endpoint
Bindings:
          ncalrpc:[LRPC-9ea544aeb17407418e]
          ncalrpc:[OLED37B776437AD4CB004BACE8FB528]
          ncalrpc:[LRPC-08847f46bd8a281b61]

Protocol: N/A
Provider: N/A
UUID    : 5222821F-D5E2-4885-84F1-5F6185A0EC41 v1.0
Bindings:
          ncalrpc:[LRPC-0353e631df3eb2e501]

Protocol: N/A
Provider: N/A
UUID    : A500D4C6-0DD1-4543-BC0C-D5F93486EAF8 v1.0
Bindings:
          ncalrpc:[LRPC-7c2ffa84b224ab979e]
          ncalrpc:[LRPC-c686fbf9d8784d4fad]

Protocol: N/A
Provider: nsisvc.dll
UUID    : 7EA70BCF-48AF-4F6A-8968-6A440754D5FA v1.0 NSI server endpoint
Bindings:
          ncalrpc:[LRPC-981c4a5e9dbceeed49]

Protocol: N/A
Provider: N/A
UUID    : 4C8D0BEF-D7F1-49F0-9102-CAA05F58D114 v1.0
Bindings:
          ncalrpc:[nlaplg]
          ncalrpc:[LRPC-ca0952ddcd2fcb7b16]
          ncalrpc:[OLE6681C17AB0F662798CF2459E34AE]

Protocol: N/A
Provider: N/A
UUID    : BD6CA954-842E-468F-8B07-89CBFA9522DC v1.0 NetworkProfiles Telemetry RPC Interface
Bindings:
          ncalrpc:[nlaplg]
          ncalrpc:[LRPC-ca0952ddcd2fcb7b16]
          ncalrpc:[OLE6681C17AB0F662798CF2459E34AE]

Protocol: N/A
Provider: N/A
UUID    : 3F787932-3452-4363-8651-6EA97BB373BB v1.0 NSP Rpc Interface
Bindings:
          ncalrpc:[LRPC-ca0952ddcd2fcb7b16]
          ncalrpc:[OLE6681C17AB0F662798CF2459E34AE]

Protocol: N/A
Provider: certprop.dll
UUID    : 30B044A5-A225-43F0-B3A4-E060DF91F9C1 v1.0
Bindings:
          ncalrpc:[LRPC-f0cc05a3297ec539f2]

Protocol: N/A
Provider: N/A
UUID    : 509BC7AE-77BE-4EE8-B07C-0D096BB44345 v1.0
Bindings:
          ncalrpc:[LRPC-ef1005950796859a36]
          ncalrpc:[OLEC22D37E668695C6C51BE34FE641A]

Protocol: N/A
Provider: N/A
UUID    : 7F1343FE-50A9-4927-A778-0C5859517BAC v1.0 DfsDs service
Bindings:
          ncacn_np:\\WINPREP[\PIPE\wkssvc]
          ncalrpc:[LRPC-d3ae7e79c2e055a0f5]

Protocol: N/A
Provider: N/A
UUID    : EB081A0D-10EE-478A-A1DD-50995283E7A8 v3.0 Witness Client Test Interface
Bindings:
          ncalrpc:[LRPC-d3ae7e79c2e055a0f5]

Protocol: N/A
Provider: N/A
UUID    : F2C9B409-C1C9-4100-8639-D8AB1486694A v1.0 Witness Client Upcall Server
Bindings:
          ncalrpc:[LRPC-d3ae7e79c2e055a0f5]

Protocol: N/A
Provider: nrpsrv.dll
UUID    : 30ADC50C-5CBC-46CE-9A0E-91914789E23C v1.0 NRP server endpoint
Bindings:
          ncalrpc:[LRPC-fac637820f0d0173ae]
          ncalrpc:[DNSResolver]

Protocol: N/A
Provider: N/A
UUID    : 29770A8F-829B-4158-90A2-78CD488501F7 v1.0
Bindings:
          ncacn_ip_tcp:192.168.224.250[49667]
          ncacn_np:\\WINPREP[\pipe\SessEnvPublicRpc]
          ncalrpc:[SessEnvPrivateRpc]
          ncalrpc:[LRPC-41ba959e001b669875]

Protocol: [MS-EVEN6]: EventLog Remoting Protocol
Provider: wevtsvc.dll
UUID    : F6BEAFF7-1E19-4FBB-9F8F-B89E2018337C v1.0 Windows Event Log
Bindings:
          ncacn_ip_tcp:192.168.224.250[49666]
          ncacn_np:\\WINPREP[\pipe\eventlog]
          ncalrpc:[eventlog]

Protocol: N/A
Provider: N/A
UUID    : 3A9EF155-691D-4449-8D05-09AD57031823 v1.0
Bindings:
          ncacn_ip_tcp:192.168.224.250[49668]
          ncalrpc:[LRPC-3bc86adfe8859090aa]
          ncalrpc:[ubpmtaskhostchannel]
          ncacn_np:\\WINPREP[\PIPE\atsvc]
          ncalrpc:[LRPC-5ab962d6465fca1443]

Protocol: [MS-TSCH]: Task Scheduler Service Remoting Protocol
Provider: schedsvc.dll
UUID    : 86D35949-83C9-4044-B424-DB363231FD0C v1.0
Bindings:
          ncacn_ip_tcp:192.168.224.250[49668]
          ncalrpc:[LRPC-3bc86adfe8859090aa]
          ncalrpc:[ubpmtaskhostchannel]
          ncacn_np:\\WINPREP[\PIPE\atsvc]
          ncalrpc:[LRPC-5ab962d6465fca1443]

Protocol: N/A
Provider: N/A
UUID    : 33D84484-3626-47EE-8C6F-E7E98B113BE1 v2.0
Bindings:
          ncalrpc:[LRPC-3bc86adfe8859090aa]
          ncalrpc:[ubpmtaskhostchannel]
          ncacn_np:\\WINPREP[\PIPE\atsvc]
          ncalrpc:[LRPC-5ab962d6465fca1443]

Protocol: [MS-TSCH]: Task Scheduler Service Remoting Protocol
Provider: taskcomp.dll
UUID    : 378E52B0-C0A9-11CF-822D-00AA0051E40F v1.0
Bindings:
          ncacn_np:\\WINPREP[\PIPE\atsvc]
          ncalrpc:[LRPC-5ab962d6465fca1443]

Protocol: [MS-TSCH]: Task Scheduler Service Remoting Protocol
Provider: taskcomp.dll
UUID    : 1FF70682-0A51-30E8-076D-740BE8CEE98B v1.0
Bindings:
          ncacn_np:\\WINPREP[\PIPE\atsvc]
          ncalrpc:[LRPC-5ab962d6465fca1443]

Protocol: N/A
Provider: schedsvc.dll
UUID    : 0A74EF1C-41A4-4E06-83AE-DC74FB1CDD53 v1.0
Bindings:
          ncalrpc:[LRPC-5ab962d6465fca1443]

Protocol: N/A
Provider: dhcpcsvc.dll
UUID    : 3C4728C5-F0AB-448B-BDA1-6CE01EB0A6D5 v1.0 DHCP Client LRPC Endpoint
Bindings:
          ncalrpc:[dhcpcsvc]
          ncalrpc:[dhcpcsvc6]

Protocol: N/A
Provider: dhcpcsvc6.dll
UUID    : 3C4728C5-F0AB-448B-BDA1-6CE01EB0A6D6 v1.0 DHCPv6 Client LRPC Endpoint
Bindings:
          ncalrpc:[dhcpcsvc6]

Protocol: N/A
Provider: N/A
UUID    : 3473DD4D-2E88-4006-9CBA-22570909DD10 v5.1 WinHttp Auto-Proxy Service
Bindings:
          ncalrpc:[00e3f55a-a268-4370-9194-af8f8e2e0426]
          ncalrpc:[LRPC-65a2c3703f5bc74dbc]

Protocol: N/A
Provider: N/A
UUID    : 13560FA9-8C09-4B56-A1FD-04D083B9B2A1 v1.0
Bindings:
          ncalrpc:[LRPC-9cad9b7fbca936c515]
          ncalrpc:[OLEA11FB6C57EE3C2083C567901AD76]

Protocol: N/A
Provider: N/A
UUID    : C2D1B5DD-FA81-4460-9DD6-E7658B85454B v1.0
Bindings:
          ncalrpc:[LRPC-9cad9b7fbca936c515]
          ncalrpc:[OLEA11FB6C57EE3C2083C567901AD76]

Protocol: N/A
Provider: N/A
UUID    : F44E62AF-DAB1-44C2-8013-049A9DE417D6 v1.0
Bindings:
          ncalrpc:[LRPC-9cad9b7fbca936c515]
          ncalrpc:[OLEA11FB6C57EE3C2083C567901AD76]

Protocol: N/A
Provider: N/A
UUID    : B37F900A-EAE4-4304-A2AB-12BB668C0188 v1.0
Bindings:
          ncalrpc:[LRPC-9cad9b7fbca936c515]
          ncalrpc:[OLEA11FB6C57EE3C2083C567901AD76]

Protocol: N/A
Provider: N/A
UUID    : ABFB6CA3-0C5E-4734-9285-0AEE72FE8D1C v1.0
Bindings:
          ncalrpc:[LRPC-9cad9b7fbca936c515]
          ncalrpc:[OLEA11FB6C57EE3C2083C567901AD76]

Protocol: N/A
Provider: N/A
UUID    : 0D3C7F20-1C8D-4654-A1B3-51563B298BDA v1.0 UserMgrCli
Bindings:
          ncalrpc:[LRPC-8ffc82ea67f825d77d]
          ncalrpc:[OLE69BF1F56989E4E57982DF4D76DDB]

Protocol: N/A
Provider: N/A
UUID    : B18FBAB6-56F8-4702-84E0-41053293A869 v1.0 UserMgrCli
Bindings:
          ncalrpc:[LRPC-8ffc82ea67f825d77d]
          ncalrpc:[OLE69BF1F56989E4E57982DF4D76DDB]

Protocol: N/A
Provider: MPSSVC.dll
UUID    : 2FB92682-6599-42DC-AE13-BD2CA89BD11C v1.0 Fw APIs
Bindings:
          ncalrpc:[LRPC-047236e5c6b095d8fe]
          ncalrpc:[LRPC-6b6f0d6320f033c5b7]
          ncalrpc:[LRPC-1b9b1a7bf00ca3c23d]
          ncalrpc:[LRPC-e30a6006efc396eb6e]

Protocol: N/A
Provider: N/A
UUID    : F47433C3-3E9D-4157-AAD4-83AA1F5C2D4C v1.0 Fw APIs
Bindings:
          ncalrpc:[LRPC-6b6f0d6320f033c5b7]
          ncalrpc:[LRPC-1b9b1a7bf00ca3c23d]
          ncalrpc:[LRPC-e30a6006efc396eb6e]

Protocol: N/A
Provider: MPSSVC.dll
UUID    : 7F9D11BF-7FB9-436B-A812-B2D50C5D4C03 v1.0 Fw APIs
Bindings:
          ncalrpc:[LRPC-1b9b1a7bf00ca3c23d]
          ncalrpc:[LRPC-e30a6006efc396eb6e]

Protocol: N/A
Provider: BFE.DLL
UUID    : DD490425-5325-4565-B774-7E27D6C09C24 v1.0 Base Firewall Engine API
Bindings:
          ncalrpc:[LRPC-e30a6006efc396eb6e]

Protocol: N/A
Provider: N/A
UUID    : C49A5A70-8A7F-4E70-BA16-1E8F1F193EF1 v1.0 Adh APIs
Bindings:
          ncalrpc:[OLEE6EC60A3B483822BAF0E109AC9B9]
          ncalrpc:[TeredoControl]
          ncalrpc:[TeredoDiagnostics]
          ncalrpc:[LRPC-594c8d3999bd9d63d9]

Protocol: N/A
Provider: N/A
UUID    : C36BE077-E14B-4FE9-8ABC-E856EF4F048B v1.0 Proxy Manager client server endpoint
Bindings:
          ncalrpc:[TeredoControl]
          ncalrpc:[TeredoDiagnostics]
          ncalrpc:[LRPC-594c8d3999bd9d63d9]

Protocol: N/A
Provider: N/A
UUID    : 2E6035B2-E8F1-41A7-A044-656B439C4C34 v1.0 Proxy Manager provider server endpoint
Bindings:
          ncalrpc:[TeredoControl]
          ncalrpc:[TeredoDiagnostics]
          ncalrpc:[LRPC-594c8d3999bd9d63d9]

Protocol: N/A
Provider: iphlpsvc.dll
UUID    : 552D076A-CB29-4E44-8B6A-D15E59E2C0AF v1.0 IP Transition Configuration endpoint
Bindings:
          ncalrpc:[LRPC-594c8d3999bd9d63d9]

Protocol: [MS-SCMR]: Service Control Manager Remote Protocol
Provider: services.exe
UUID    : 367ABB81-9844-35F1-AD32-98F038001003 v2.0
Bindings:
          ncacn_ip_tcp:192.168.224.250[49669]

Protocol: N/A
Provider: N/A
UUID    : 1A0D010F-1C33-432C-B0F5-8CF4E8053099 v1.0 IdSegSrv service
Bindings:
          ncalrpc:[LRPC-6852ec201e5fa7344a]

Protocol: N/A
Provider: srvsvc.dll
UUID    : 98716D03-89AC-44C7-BB8C-285824E51C4A v1.0 XactSrv service
Bindings:
          ncalrpc:[LRPC-6852ec201e5fa7344a]

Protocol: N/A
Provider: IKEEXT.DLL
UUID    : A398E520-D59A-4BDD-AA7A-3C1E0303A511 v1.0 IKE/Authip API
Bindings:
          ncalrpc:[LRPC-020b537bc97fbac09d]

Protocol: N/A
Provider: N/A
UUID    : 1D45E083-478F-437C-9618-3594CED8C235 v1.0
Bindings:
          ncalrpc:[LRPC-36dd2150c7f8b4c638]
          ncalrpc:[OLE5A79C83E3B389E6C57955FC25400]

Protocol: N/A
Provider: N/A
UUID    : 98CD761E-E77D-41C8-A3C0-0FB756D90EC2 v1.0
Bindings:
          ncalrpc:[LRPC-36dd2150c7f8b4c638]
          ncalrpc:[OLE5A79C83E3B389E6C57955FC25400]

Protocol: N/A
Provider: N/A
UUID    : D22895EF-AFF4-42C5-A5B2-B14466D34AB4 v1.0
Bindings:
          ncalrpc:[LRPC-36dd2150c7f8b4c638]
          ncalrpc:[OLE5A79C83E3B389E6C57955FC25400]

Protocol: N/A
Provider: N/A
UUID    : E38F5360-8572-473E-B696-1B46873BEEAB v1.0
Bindings:
          ncalrpc:[LRPC-36dd2150c7f8b4c638]
          ncalrpc:[OLE5A79C83E3B389E6C57955FC25400]

Protocol: N/A
Provider: N/A
UUID    : 95095EC8-32EA-4EB0-A3E2-041F97B36168 v1.0
Bindings:
          ncalrpc:[LRPC-36dd2150c7f8b4c638]
          ncalrpc:[OLE5A79C83E3B389E6C57955FC25400]

Protocol: N/A
Provider: N/A
UUID    : FD8BE72B-A9CD-4B2C-A9CA-4DED242FBE4D v1.0
Bindings:
          ncalrpc:[LRPC-36dd2150c7f8b4c638]
          ncalrpc:[OLE5A79C83E3B389E6C57955FC25400]

Protocol: N/A
Provider: N/A
UUID    : 4C9DBF19-D39E-4BB9-90EE-8F7179B20283 v1.0
Bindings:
          ncalrpc:[LRPC-36dd2150c7f8b4c638]
          ncalrpc:[OLE5A79C83E3B389E6C57955FC25400]

Protocol: N/A
Provider: N/A
UUID    : D4051BDE-9CDD-4910-B393-4AA85EC3C482 v1.0
Bindings:
          ncalrpc:[LRPC-36dd2150c7f8b4c638]
          ncalrpc:[OLE5A79C83E3B389E6C57955FC25400]

Protocol: N/A
Provider: N/A
UUID    : 7DF1CEAE-DE4E-4E6F-AB14-49636E7C2052 v1.0
Bindings:
          ncalrpc:[LRPC-9188668527a08057cd]

Protocol: N/A
Provider: N/A
UUID    : 714DC5C4-C5F6-466A-B037-A573C958031E v1.0 ProcessTag Server Endpoint
Bindings:
          ncalrpc:[LRPC-6c6e0c8d3efe6ed14c]
          ncalrpc:[OLE0D9CF8BE17AE965BBEDC94A20A54]

Protocol: N/A
Provider: N/A
UUID    : 78DCCE84-7F13-4139-B8CD-EF222AA0408B v1.0 StateRepository
Bindings:
          ncalrpc:[LRPC-b519917fb82490e7b3]
          ncalrpc:[OLEB49A852A2AC9241E6A04CF18518B]

Protocol: [MS-FASP]: Firewall and Advanced Security Protocol
Provider: FwRemoteSvr.dll
UUID    : 6B5BDD1E-528C-422C-AF8C-A4079BE4FE48 v1.0 Remote Fw APIs
Bindings:
          ncacn_ip_tcp:192.168.224.250[49670]

Protocol: N/A
Provider: sysmain.dll
UUID    : B58AA02E-2884-4E97-8176-4EE06D794184 v1.0
Bindings:
          ncalrpc:[LRPC-37b365d93dea17a4f0]

Protocol: [MS-CMPO]: MSDTC Connection Manager:
Provider: msdtcprx.dll
UUID    : 906B0CE0-C70B-1067-B317-00DD010662DA v1.0
Bindings:
          ncalrpc:[LRPC-002f4af5dda045a749]
          ncalrpc:[OLEA8831B4EB103E244C668376D648F]
          ncalrpc:[LRPC-9e142934a6eec99e5e]
          ncalrpc:[LRPC-9e142934a6eec99e5e]
          ncalrpc:[LRPC-9e142934a6eec99e5e]

Protocol: N/A
Provider: N/A
UUID    : F3F09FFD-FBCF-4291-944D-70AD6E0E73BB v1.0
Bindings:
          ncalrpc:[LRPC-efc8539f73ece59df9]

Protocol: N/A
Provider: N/A
UUID    : D249BD56-4CC0-4FD3-8CE6-6FE050D590CB v0.0
Bindings:
          ncalrpc:[LRPC-7b02abfce3837c4e1f]

Protocol: N/A
Provider: N/A
UUID    : EC029036-297F-4F3A-A169-7A2FEFA5CC3E v0.0
Bindings:
          ncalrpc:[LRPC-7b02abfce3837c4e1f]

Protocol: N/A
Provider: N/A
UUID    : C27F3C08-92BA-478C-B446-B419C4CEF0E2 v1.0
Bindings:
          ncalrpc:[LRPC-080041ac946e536b0a]

Protocol: N/A
Provider: ssdpsrv.dll
UUID    : 4B112204-0E19-11D3-B42B-0000F81FEB9F v1.0
Bindings:
          ncalrpc:[LRPC-38f7b619c526ee5064]

Protocol: N/A
Provider: pcasvc.dll
UUID    : 0767A036-0D22-48AA-BA69-B619480F38CB v1.0 PcaSvc
Bindings:
          ncalrpc:[LRPC-bfa1287f1e2e7b9972]

Protocol: N/A
Provider: N/A
UUID    : 7A20FCEC-DEC4-4C59-BE57-212E8F65D3DE v1.0
Bindings:
          ncalrpc:[LRPC-4dbe560000fac99388]

Protocol: N/A
Provider: wscsvc.dll
UUID    : 06BBA54A-BE05-49F9-B0A0-30F790261023 v1.0 Security Center
Bindings:
          ncalrpc:[LRPC-8a95b6e1ef9d220d6d]
          ncalrpc:[OLEA5508B4D17A5CAB02FC03BDCBDF0]

Protocol: N/A
Provider: N/A
UUID    : A4B8D482-80CE-40D6-934D-B22A01A44FE7 v1.0 LicenseManager
Bindings:
          ncalrpc:[LicenseServiceEndpoint]

Protocol: N/A
Provider: N/A
UUID    : BF4DC912-E52F-4904-8EBE-9317C1BDD497 v1.0
Bindings:
          ncalrpc:[LRPC-ee36f0f23900722638]
          ncalrpc:[OLE5BA6D805048E35A659E0305B3D2C]

Protocol: N/A
Provider: N/A
UUID    : 572E35B4-1344-4565-96A1-F5DF3BFA89BB v1.0 LiveIdSvcNotify RPC Interface
Bindings:
          ncalrpc:[liveidsvcnotify]

Protocol: N/A
Provider: N/A
UUID    : FAF2447B-B348-4FEB-8DBE-BEEE5B7F7778 v1.0 OnlineProviderCert RPC Interface
Bindings:
          ncalrpc:[LRPC-2d7134eae0db0a6cb6]

Protocol: N/A
Provider: N/A
UUID    : CC105610-DA03-467E-BC73-5B9E2937458D v1.0 LiveIdSvc RPC Interface
Bindings:
          ncalrpc:[LRPC-2d7134eae0db0a6cb6]

Protocol: N/A
Provider: N/A
UUID    : 64D1D045-F675-460B-8A94-570246B36DAB v1.0 CLIPSVC Default RPC Interface
Bindings:
          ncalrpc:[ClipServiceTransportEndpoint-00001]

Protocol: N/A
Provider: N/A
UUID    : FF9FD3C4-742E-45E0-91DD-2F5BC632A1DF v1.0 appxsvc
Bindings:
          ncalrpc:[LRPC-5fb39ad4bf1a25d9b6]

Protocol: N/A
Provider: N/A
UUID    : AE2DC901-312D-41DF-8B79-E835E63DB874 v1.0 appxsvc
Bindings:
          ncalrpc:[LRPC-5fb39ad4bf1a25d9b6]

Protocol: N/A
Provider: wbiosrvc.dll
UUID    : 4BE96A0F-9F52-4729-A51D-C70610F118B0 v1.0 wbiosrvc
Bindings:
          ncalrpc:[LRPC-33dc107cb8cfef5ce3]

Protocol: N/A
Provider: wbiosrvc.dll
UUID    : C0E9671E-33C6-4438-9464-56B2E1B1C7B4 v1.0 wbiosrvc
Bindings:
          ncalrpc:[LRPC-33dc107cb8cfef5ce3]

Protocol: N/A
Provider: gpsvc.dll
UUID    : 2EB08E3E-639F-4FBA-97B1-14F878961076 v1.0 Group Policy RPC Interface
Bindings:
          ncalrpc:[LRPC-e1a5ae2f70c60915b5]

[*] Received 313 endpoints.

